[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulation", "src/shared"]

[project]
name = "simulation"
version = "0.1.0"
description = "LeanGuard — Lean-Angle-Aware Blind Spot Detection for Motorcycles (CARLA simulation)."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["leanguard", "motorcycle", "blind-spot-detection", "carla", "radar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "carla>=0.9.16",
    "numpy>=2.4.6",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
]
viewer = [
    "pygame>=2.6.1",
]

[project.urls]
Homepage = "https://github.com/<your-org>/LeanGuard"
Repository = "https://github.com/<your-org>/LeanGuard"
Issues = "https://github.com/<your-org>/LeanGuard/issues"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN101", # Missing type annotation for `self`
    "ANN102", # Missing type annotation for `cls`
    "S101",   # Use of `assert` (fine in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["simulation", "shared"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "carla"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
